fix buy now product alignments

--- a/src/App.css
+++ b/src/App.css
@@ -106,10 +106,12 @@ body {
   align-items: center;
   margin-top: 100px;
   justify-content: space-evenly;
+  width: 80%;
+  margin-left: 10%;
 }
 
 .product-display .product {
-  width: 40%; /* considering 20px gap */
+  width: 45%; /* considering 20px gap */
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -192,8 +194,8 @@ body {
   
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  align-items: stretch;
+  justify-content: center;
+  align-content:space-between;
 }
 
 .singleItems .buySection h1{
@@ -206,9 +208,13 @@ body {
   justify-content: center;
 }
 
+.singleItems .buySection .imgSection{
+  width: 100%;
+}
+
 .singleItems .buySection img{
   width: 50%;
-  margin-left: 25%;
+  
   margin-bottom: 10%;
 }
 
@@ -216,7 +222,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 0;
+  margin-top: 2%;
 }
 
 .footer{
